@@ -1,6 +1,6 @@
 plugin.MacOSPlugin.name=Mac OS Plugin
 plugin.MacOSPlugin.author=Kris Kopicki
-plugin.MacOSPlugin.version=1.0.1
+plugin.MacOSPlugin.version=1.0.2
 plugin.MacOSPlugin.docs=MacOS.html
 
 plugin.MacOSPlugin.depend.0=jedit 04.00.01.00
